--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,6 +77,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-facebook-login": "^4.1.1",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.42.1",
     "react-i18next": "^12.1.4",
