--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://bitbucket.org/ankit6549/podasq#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.279.0",
     "aws-sdk": "^2.1288.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
