--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
+    "linkedin-api-client": "^0.3.0",
     "mongoose": "^5.13.15",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
