--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.3",
+    "antd-img-crop": "^4.12.2",
     "axios": "^1.3.6",
     "dayjs": "^1.11.7",
     "prop-types": "^15.8.1",
