--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "linkedin-api-client": "^0.3.0",
     "mongoose": "^5.13.15",
     "nodemailer": "^6.8.0",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
     "passport-instagram": "^1.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
