--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nodemailer": "^6.8.0",
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-instagram": "^1.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
     "stripe": "^7.63.1"
