--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "recordrtc": "^5.6.2",
     "simplebar-react": "^3.2.3",
     "web-vitals": "^2.1.4"
   },
