--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jsonwebtoken": "^9.0.0",
     "linkedin-api-client": "^0.3.0",
     "mongoose": "^5.13.15",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
