--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.8.3",
+    "antd": "^5.12.5",
     "antd-img-crop": "^4.12.2",
     "axios": "^1.3.6",
     "dayjs": "^1.11.7",
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.2",
     "react-color": "^2.19.3",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-quill": "^2.0.0",
