--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "antd-img-crop": "^4.12.2",
     "axios": "^1.3.6",
     "dayjs": "^1.11.7",
+    "exceljs": "^4.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.2",
