--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,49 @@
-version: '3.7'
+version: "3.7"
 services:
   backend:
     build: .
-    image: 'pdsq_backend'
+    image: "pdsq_backend"
     # network_mode: bridge
-    container_name: 'pdsq_backend'
+    container_name: "pdsq_backend"
     ports:
-      - '${PORT}:${PORT}'
+      - "${PORT}:${PORT}"
     env_file:
       - .env
     volumes:
       - type: bind
         source: .
         target: /usr/src/app
+    develop:
+      watch:
+        - action: sync
+          path: .
+          target: /usr/src/app
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: package.json
     networks:
       - upplaud_default
   frontend:
     build: frontend/
-    image: 'pdsq_frontend'
+    image: "pdsq_frontend"
     # network_mode: bridge
-    container_name: 'pdsq_frontend'
+    container_name: "pdsq_frontend"
     ports:
       - 3030:3030
     volumes:
       - type: bind
         source: ./frontend/
         target: /usr/src/app
+    develop:
+      watch:
+        - action: sync
+          path: ./frontend/
+          target: /usr/src/app
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: package.json
     depends_on:
       - backend
     networks:
