--- a/package.json
+++ b/package.json
@@ -30,24 +30,31 @@
     "aws-sdk": "^2.1288.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-validator": "^6.14.2",
+    "file-reader": "^1.1.1",
     "google-auth-library": "^8.7.0",
+    "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.0",
     "linkedin-api-client": "^0.3.0",
     "mongoose": "^5.13.15",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.8.0",
+    "papaparse": "^5.4.1",
     "passport": "^0.5.3",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-instagram": "^1.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
+    "redux-persist": "^6.0.0",
     "stripe": "^7.63.1"
   },
   "devDependencies": {
